fix: remove scroling from the "create table" window content and fix green color of the "collapse borders" input

--- a/TelerikMvcWebMail/Content/metroThemeCustomization.scss
+++ b/TelerikMvcWebMail/Content/metroThemeCustomization.scss
@@ -48,6 +48,17 @@ html {
         color: inherit;
     }
 
+    .k-checkbox-label:hover:before,
+    .k-checkbox:checked+.k-checkbox-label:hover:before,
+    .k-checkbox:focus+.k-checkbox-label:before
+     {
+        border-color: $accent;
+    }
+
+    .k-checkbox:checked+.k-checkbox-label:before {
+        color: $accent;
+    }
+
 }
 
 .k-widget.k-tooltip {
