--- a/TelerikMvcWebMail/Content/new.scss
+++ b/TelerikMvcWebMail/Content/new.scss
@@ -70,7 +70,7 @@
     }
 
     html .k-editor-dialog.k-editor-table-wizard-dialog .k-tabstrip-wrapper .k-content {
-        overflow: auto;
+        font-size: 12px;
     }
 
     h2 {
